Fix an immutable list